# cr

./: DEVELOPER_GUIDE.md  crypto_obi_optimized.hpp  global_deployment_strategy.md  latency_arb_optimized.hpp
trading_engine_v3.1/: CMakeLists.txt  FIXES_APPLIED.md  INSTITUTIONAL_GRADE.md  PERFORMANCE_OPTIMIZATIONS.md  README_V3.1.md
trading_engine_v3.1/src/: main.cpp
trading_engine_v3.1/src/core/: circuit_breaker.hpp  circular_buffer.hpp  memory_pool.hpp  order_tracker.hpp  risk_manager.hpp  string_interning.hpp  types.hpp
trading_engine_v3.1/src/market_data/: order_book.hpp
trading_engine_v3.1/src/strategies/: adverse_selection_filter.hpp  latency_arbitrage.hpp  order_book_imbalance.hpp  pairs_trading.hpp  strategy_coordinator.hpp  volatility_arbitrage.hpp
